--- a/coc-settings.json
+++ b/coc-settings.json
@@ -41,6 +41,8 @@
   "diagnostic.virtualTextPrefix": " ❯❯❯ ",
   "diagnostic.virtualText": true,
   "codeLens.enable": true,
+  "list.previousKeymap":"<C-k>",
+  "list.nextKeymap": "<C-j>",
   "explorer.file.column.indent.indentLine": true,
   "explorer.file.showHiddenFiles": true,
   "explorer.icon.enableNerdfont": true,
@@ -63,7 +65,7 @@
   "explorer.git.icon.status.untracked": "?",
   "explorer.git.icon.status.ignored": " ",
   "git.showCommitInFloating": true,
-  "git.addGBlameToVirtualText": false,
+  "git.addGBlameToVirtualText": true,
   "git.addGBlameToBufferVar": true,
   "clangd.path": "~/.config/coc/extensions/coc-clangd-data/install/13.0.0/clangd_13.0.0/bin/clangd"
 
