--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,10 +1,10 @@
 {
   "coc.preferences.extensionUpdateCheck": "daily",
   "notification.border": false,
-  "dialog.rounded":false,
+  "dialog.rounded": false,
   "suggest.noselect": true,
   "suggest.enablePreselect": false,
-  "suggest.floatConfig":{ "border":false },
+  "suggest.floatConfig": { "border":false },
 
   "suggest.completionItemKindLabels":
   {
@@ -74,6 +74,7 @@
   "pyright.inlayHints.functionReturnTypes":false,
   "clangd.disableProgressNotifications": true,
   "pyright.disableProgressNotifications": true,
+  "pyright.completion.importSupport": false,
   "notification.disabledProgressSources": ["*"],
   "clangd.path": "~/.config/coc/extensions/coc-clangd-data/install/13.0.0/clangd_13.0.0/bin/clangd"
 
